@@ -15,16 +15,17 @@ EXTRA_DIST = README Doxyfile.in \
              $(hierarchy_files) \
              xml/index.xml #Just to satisfy the dependency when building from the tarball.
 
+STOCK_DIR=images/stock
+
 # The html is generated by doxygen. We generate xml also, but we are not distributing it yet.
 # The installdox thing is part of doxygen - it fixes the URLs to point to the glibmm reference docs.
 # beautify_docs moves the * and & next to the C++ types rather than the parameter names.
-html/index.html: $(doxygen_configfile_source)
+html/index.html: $(doxygen_configfile_source) $(STOCK_DIR)
 	-rm -rf html
 	image_path=""; \
-	dir="`pkg-config --silence-errors --variable=prefix gtk+-2.0`/share/gtk-doc/html/gtk"; \
-	test -d "$$dir" && image_path="$$dir"; \
-	dir="$(top_srcdir)/../gtk+/gtk/stock-icons"; \
-	test -d "$$dir" && image_path="$$image_path $$dir"; \
+	for subdir in $(STOCK_DIR)/* ; do \
+		test -d "$$subdir" && image_path="$$image_path $$subdir"; \
+	done; \
 	DOXYGEN_IMAGE_PATH="$${DOXYGEN_IMAGE_PATH:=$$image_path}" doxygen $(doxygen_configfile) \
 	2> doxygen-warnings.txt | tee doxygen-output.txt && cat doxygen-warnings.txt
 	cd html && ./installdox -l glibmm_doxygen_tags@../../../../glibmm-2.4/docs/reference/html \
