@@ -47,6 +47,9 @@ _WRAP_ENUM(CalendarDisplayOptions, GtkCalendarDisplayOptions)
  * If performing many 'mark' operations, the calendar can be frozen to
  * prevent flicker, using freeze(), and 'thawed' again using thaw().
  *
+ * The Calendar widget looks like this:
+ * @image html calendar1.png
+ *
  * @ingroup Widgets
  */
 class Calendar : public Widget
