@@ -1,4 +1,4 @@
-/* $Id$ */
+/* $Id: progressbar.hg,v 1.2 2004/11/10 22:05:57 murrayc Exp $ */
 
 /* progressbar.h
  * 
@@ -58,6 +58,9 @@ _WRAP_ENUM(ProgressBarOrientation, GtkProgressBarOrientation)
  * the Gtk::ProgressBar. Functions are provided to control the orientation of
  * the bar, optional text can be displayed along with the bar, and the step
  * size used in activity mode can be set. 
+ *
+ * The ProgressBar widget looks like this:
+ * @image html progressbar1.png
  *
  * @ingroup Widgets
  */
