@@ -1,4 +1,4 @@
-/* $Id$ */
+/* $Id: spinbutton.hg,v 1.4 2006/07/19 15:35:02 murrayc Exp $ */
 
 /* Copyright (C) 1998-2002 The gtkmm Development Team
  *
@@ -38,6 +38,9 @@ class Adjustment;
 
 /** numeric Entry with up/down buttons
  * Slightly misnamed, this should be called a SpinEntry.
+ *
+ * The SpinButton widget looks like this:
+ * @image html spinbutton1.png
  *
  * @ingroup Widgets
  */
