@@ -44,6 +44,9 @@ _WRAP_ENUM(TextWindowType, GtkTextWindowType)
 
 /** Multi-line text editing widget. It displays a Gtk::TextBuffer.
  *
+ * The TextView widget looks like this:
+ * @image html textview1.png
+ *
  * @ingroup Widgets
  * @ingroup Containers
  * @ingroup TextView
