@@ -1,5 +1,15 @@
 2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>
 
+	* docs/reference/Makefile.am:
+	* gtk/gtkmm/stock.h:
+	* gtk/src/calendar.hg:
+	* gtk/src/entry.hg:
+	* gtk/src/progressbar.hg:
+	* gtk/src/spinbutton.hg:
+	* gtk/src/textview.hg: add a few more widget images to the API documentation
+
+2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>
+
 	* docs/reference/Doxyfile.in: add an image directory with widget screenshots
 	to the doxygen config file
 	* gtk/src/arrow.hg:
